<resources>
    <string name="app_name">融合通信</string>
    <string name="authing">正在认证...</string>
    <string name="auth_fail">认证失败...</string>
    <string name="logining">正在登录...</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="connecting_server">正在连接服务器</string>
    <string name="updating_data">正在更新数据</string>
    <string name="please_regist_account">请注册账号</string>
    <string name="accunt_no_exist">账号不存在</string>
    <string name="accunt_is_delete">账号被删除</string>
    <string name="terminal_is_remotely_closed">终端被遥闭</string>
    <string name="action_settings">Settings</string>
    <string name="regist_org_hint">请输入注册码</string>
    <string name="regist_name_hint">请输入姓名</string>
    <string name="regist_police_no_hint">请输入警号</string>
    <string name="search_hint">搜索</string>
    <string name="regist_police_name_hint">请输入警员名称</string>
    <string name="regist_department_number_hint">请输入部门编号</string>
    <string name="regist_department_name_hint">请输入部门名称</string>
    <string name="simulated_police_officer">模拟警员</string>
    <string name="regist_button">注册</string>
    <string name="reauth_button">认证</string>
    <string name="bottom_navigation_talkback">对讲</string>
    <string name="bottom_navigation_person_contacts">消息</string>
    <string name="bottom_navigation_group_contacts">通讯录</string>
    <string name="bottom_navigation_setting">我</string>
    <string name="i_am_speaking">我</string>
    <string name="pre_speaking">准备说话...</string>
    <string name="change_group_promp">滑动换组</string>
    <string name="press_to_talk_text">按住说话</string>
    <string name="silence_text">空闲</string>
    <string name="other_is_talking_text">其它人正在说话</string>
    <string name="wait_in_line_text">排队中&#8230;</string>
    <string name="not_listen">您已被禁听</string>
    <string name="not_speak">您已被禁言</string>
    <string name="not_listen_and_speak">您已被禁言和禁听</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_force_title">V%1$s</string>
    <string name="soft_update_info">检测到新版本，立即更新吗?</string>
    <string name="soft_update_force_info">发现新版本，需要更新才能正常使用。</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_update_exit">退出</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="log_upload">日志上传</string>
    <string name="individuation">个性装扮</string>
    <string name="group_scan">组扫描</string>
    <string name="volume_setting">音量</string>
    <string name="volume_setting_size_pro">提示音量</string>
    <string name="volume_setting_size_call">通话音量</string>
    <string name="volume_number_setting">60%</string>
    <string name="exit">退出系统</string>
    <string name="ptt_setting">PTT设置</string>
    <string name="pttfloat_setting">悬浮按钮设置</string>
    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">释放以刷新...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">加载之前数据</string>
    <string name="pull_to_refresh_updated_at_label">更新于: </string>
    <string name="loadmore_label">加载更多</string>
    <string name="loading_label">正在加载....</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="tv_linkman_delete">删除联系人</string>
    <string name="connect_us_phone">18301003647</string>
    <string name="size">已选%1$s</string>
    <string name="send">发送(%1$s)</string>
    <string name="count">共%1$s个文件</string>
    <string name="up_for_cancel">手指上滑，取消发送</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="time_too_short">录音时间过短</string>
    <string name="long_click_record">长按 录音</string>
    <string name="hang_up_finsh">松开 结束</string>
    <string name="release_cancel">松开 取消</string>
    <string name="current_group_members">%1$d人在线</string>
    <string name="current_push_member">%1$s上报图像</string>
    <string name="no_answer">未接听</string>
    <string name="press_talk">按住PTT说话</string>
    <string name="talking">正在通话…</string>
    <string name="stop_talk">通话结束</string>
    <string name="other_cancel">对方已取消</string>
    <string name="other_stop_call">对方已挂断</string>
    <string name="open_overlay_permisson">请打开悬浮窗权限，否则私密呼叫和图像功能无法使用！</string>
    <string name="open_self_permisson">请打开%1$s自启动权限</string>
    <string name="no_recorde_permisson">没有开启悬浮窗权限</string>
    <string name="no_group_call_permission">没有组呼权限</string>
    <string name="i_pre_speaking">我准备说话</string>
    <string name="other_speaking">对方正在说话</string>
    <string name="i_speaking">我正在讲话</string>
    <string name="cannot_talk">当前组是只听组，不能发起组呼</string>
    <string name="net_work_disconnect">网络连接已断开</string>
    <string name="refused">已拒绝</string>
    <string name="out_camera">外置摄像头</string>
    <string name="recoder_camera">执法记录仪</string>
    <string name="no_push_authority">没有图像推送权限</string>
    <string name="no_pull_authority">没有图像请求权限</string>
    <string name="pushing_stream">推流中…</string>
    <string name="push_stoped">上报已结束</string>
    <string name="living_hang_up">对方已挂断</string>
    <string name="push_failed">图像上传失败</string>
    <string name="theme_cannot_empty">输入主题不能为空</string>
    <string name="i_pushing_video">我正在上报视频</string>
    <string name="no_members_data">没有获取到成员数据</string>
    <string name="confirm">确定</string>
    <string name="canceled">已取消</string>
    <string name="other_no_answer">对方无应答</string>
    <string name="please_select_live_member">请选择请求图像人</string>
    <string name="please_check_network">请检查网络连接</string>
    <string name="no_rtsp_data">没有获取到数据流地址或图像上传已结束</string>
    <string name="time_up">试播时间到</string>
    <string name="voice_not_support">音频格式不支持</string>
    <string name="video_not_support">视频格式不支持</string>
    <string name="watch_finished">观看已结束</string>
    <string name="huang_up">已挂断</string>
    <string name="exit_pull">网络无法连接，已退出观看</string>
    <string name="exit_push">网络无法连接，已退出上报</string>
    <string name="activity_about_function_introduction">功能介绍</string>
    <string name="activity_about_check_the_new_version">检查新版本</string>
    <string name="activity_ble_blue_tooth_ptt">蓝牙PTT</string>
    <string name="activity_ble_start">开启</string>
    <string name="activity_ble_enable_devices">可用设备</string>
    <string name="activity_ble_tempt_text">开启蓝牙后,您的设备可以与附近的其他蓝牙PTT设备通信</string>
    <string name="loading_text">加载中</string>
    <string name="text_I_am_talking">我正在说话</string>
    <string name="text_ready_to_speak">准备说话</string>
    <string name="text_disconnection_of_network_connection">网络连接断开</string>
    <string name="text_selected">已选中</string>
    <string name="activity_killed_text_one">您已被禁止使用!</string>
    <string name="activity_killed_text_two">如有疑问请联系管理员</string>
    <string name="corporate_name">武汉惟实信技术有限公司</string>
    <string name="closed_report">已结束上报</string>
    <string name="text_watch_this_video">观看本次录像</string>
    <string name="text_image_assistant">图像助手</string>
    <string name="text_telephone_assistant">电话助手</string>
    <string name="text_upper_row_unlock">上划解锁</string>
    <string name="add">添加</string>
    <string name="activity_set_sweep_tempt">最多可添加10个扫描组(包含主通话组)</string>
    <string name="add_to_address_book">添加到通讯录</string>
    <string name="kill">遥毙</string>
    <string name="text_subordinate_unit">所属单位</string>
    <string name="not_filled">未填写</string>
    <string name="text_telephone_number">电话号码</string>
    <string name="text_not_find">没有找到“</string>
    <string name="text_related_results">”相关结果</string>
    <string name="text_next">下一步</string>
    <string name="text_search">搜索</string>
    <string name="text_name">名称</string>
    <string name="text_temporary_group">临时组</string>
    <string name="text_survival_time">存活时间</string>
    <string name="text_survival_time_tempt">( 临时组存在的时间 )</string>
    <string name="text_is_it_locked">是否锁定</string>
    <string name="text_yes">是</string>
    <string name="text_no">否</string>
    <string name="text_locked_tempt">( 锁定后，不允许临时组内成员切组 )</string>
    <string name="text_locked_time">锁定时间</string>
    <string name="text_change_group_auto">自动切组</string>
    <string name="whether_scan">是否扫描</string>
    <string name="whether_monitor">是否监听</string>
    <string name="whether_listen_the_group">( 组员是否收听这个组 )</string>
    <string name="text_change_group_auto_tempt">( 将组员自动切换到所创建的组 )</string>
    <string name="text_sure_to_create_group">确定创建</string>
    <string name="dialog_change_group_cancel_title">将7B-13T添加到扫描组?</string>
    <string name="text_temporary_group_creatting">正在创建...</string>
    <string name="text_temporary_group_jumping">正在跳转....</string>
    <string name="text_temporary_group_create_success">创建成功!</string>
    <string name="text_temporary_group_create_fail">创建失败!</string>
    <string name="text_disbanded_successfully">解散成功</string>
    <string name="dialog_delete_temporary_group_title">确定解散临时组？</string>
    <string name="text_temporary_group_destroying">正在解散...</string>
    <string name="text_disbanded_fail">解散失败!</string>
    <string name="text_disbanded_fail_by_send_fail">解散临时组命令发送失败</string>
    <string name="text_sure">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_forward">转发</string>
    <string name="text_copy">复制</string>
    <string name="text_withdraw">撤回</string>
    <string name="text_forward_more">合并转发</string>
    <string name="text_delete_this_message">删除该消息</string>
    <string name="text_group">群组</string>
    <string name="text_radio_station">电台</string>
    <string name="text_police_service">警务通</string>
    <string name="text_lte">LTE</string>
    <string name="text_pc">PC</string>
    <string name="text_recoder">执法记录仪</string>
    <string name="text_recoder_abridge">执法仪</string>
    <string name="text_recoder_abridge_4">4G执法仪</string>
    <string name="text_hdmi">HDMI</string>
    <string name="text_uav">无人机</string>
    <string name="text_search_by_group_name">输入组名称 搜索</string>
    <string name="text_search_by_name_or_number">输入姓名/编号 搜索</string>
    <string name="text_contacts">联系人</string>
    <string name="text_me">我</string>
    <string name="text_close">关闭</string>
    <string name="text_settings_video_resolution">视频分辨率设置</string>
    <string name="text_log_uploading">日志上传</string>
    <string name="text_settings_lock_screen">锁屏设置</string>
    <string name="text_daytime_mode">白天模式</string>
    <string name="text_help_and_feedback">帮助与反馈</string>
    <string name="text_about_app">关于%1$sAPP</string>
    <string name="text_send">发送</string>
    <string name="text_ptt">PTT</string>
    <string name="text_group_members">组内成员</string>
    <string name="text_group_members_number">组内成员%1$d人</string>
    <string name="text_loading">加载中</string>
    <string name="text_intra_group_line_members">组内在线成员</string>
    <string name="text_call_hang_up">挂断</string>
    <string name="text_accepted">接受</string>
    <string name="text_in_requesting">请求中...</string>
    <string name="text_request_you_to_report_the_image">请求您上报图像</string>
    <string name="text_editing_theme">编辑主题</string>
    <string name="text_subject_of_the_image_reporting">本次上报图像的主题</string>
    <string name="text_live_edit_theme_hint">主题将显示在推送的图像消息上，被接收人看到</string>
    <string name="nfc_binding">NFC绑定</string>
    <string name="binding_success">绑定成功</string>
    <string name="binding_nfc_tempt">请将警务通贴紧需要绑定的设备</string>
    <string name="pc_login_confirm">PC端登录确认</string>
    <string name="login">登录</string>
    <string name="login_cancel">取消登录</string>
    <string name="text_temp_unbind">确认解绑执法记录仪?</string>
    <string name="text_unbind">解绑</string>
</resources>