<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="@dimen/x40"
            android:layout_height="@dimen/x40"
            android:layout_above="@+id/text_context"
            android:layout_centerHorizontal="true"
            android:background="@drawable/dialog_icon"
            />

        <TextView
            android:id="@+id/text_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_disbanded_successfully"
            android:textSize="@dimen/sp_25"
            android:layout_marginTop="@dimen/x5"
            android:layout_marginBottom="@dimen/x5"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/text_toJump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_context"
            android:layout_centerHorizontal="true"
            android:text="@string/text_temporary_group_jumping"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/yellow_ef"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_delete_temporary_group_title"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x30"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/live_theme_confirm_bg"
                android:text="@string/text_sure"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/live_theme_confirm_bg"
                android:text="@string/text_cancel"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>