<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x267"
    android:layout_height="wrap_content"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y35"
        android:layout_centerHorizontal="true"
        android:background="@color/background_blue"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/x20"
        android:text="@string/dialog_change_group_cancel_title"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y28">

        <TextView
            android:id="@+id/dialog_no"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/text_no"
            android:textColor="@color/group_text_black"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/dialog_yes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_1"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/text_yes"
            android:textColor="@color/group_text_black"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

</LinearLayout>