<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tv_linkman_delete"
        android:layout_width="@dimen/x280"
        android:layout_height="@dimen/tv_linkman_delete_height"
        android:background="@color/tv_linkman_delete_bg"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15"
            android:gravity="center_vertical"
            android:text="@string/text_forward"
            android:textSize="@dimen/tv_linkman_delete_textsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv_copy"
        android:layout_width="@dimen/x280"
        android:layout_height="@dimen/tv_linkman_delete_height"
        android:background="@color/tv_linkman_delete_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15"
            android:gravity="center_vertical"
            android:text="@string/text_copy"
            android:textSize="@dimen/tv_linkman_delete_textsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv_withdraw"
        android:layout_width="@dimen/x280"
        android:layout_height="@dimen/tv_linkman_delete_height"
        android:background="@color/tv_linkman_delete_bg"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15"
            android:gravity="center_vertical"
            android:text="@string/text_withdraw"
            android:textSize="@dimen/tv_linkman_delete_textsize" />
    </LinearLayout>

</LinearLayout>