<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_call_star_blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/new_call_star_blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5">

        <ImageView
            android:id="@+id/iv_live_edit_return"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/delete_edittext" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/blue_1a79" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_editing_theme"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/new_call_include_ptt_bg"
        android:padding="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_20"
        android:text="@string/text_subject_of_the_image_reporting"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_live_edit_import_theme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:hint="@string/text_live_edit_theme_hint"
            android:maxLength="17"
            android:maxLines="3"
            android:padding="@dimen/dp_10"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/new_call_include_ptt_bg"
        android:gravity="center"
        android:padding="@dimen/dp_15">l

        <Button
            android:id="@+id/btn_live_edit_confirm"
            android:layout_width="@dimen/dp_350"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/live_theme_confirm_bg"
            android:gravity="center"
            android:text="@string/text_sure"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>
</LinearLayout>