<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_background"
    android:paddingLeft="@dimen/dp_15"
    android:paddingRight="@dimen/dp_15"
    android:paddingTop="@dimen/dp_30"
    android:paddingBottom="@dimen/dp_30"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/dp_10"
        android:src="@drawable/live_cencle" />

    <View
        android:id="@+id/v_center"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="@dimen/dp_10"/>


    <TextView
        android:id="@+id/tv_tempt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_above="@+id/v_center"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/pc_login_confirm"
        android:textColor="@color/chat_name"
        android:textSize="@dimen/sp_13" />

    <ImageView
        android:layout_width="@dimen/dp_140"
        android:layout_height="@dimen/dp_113"
        android:layout_above="@+id/tv_tempt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/dp_10"
        android:src="@drawable/icon_pc" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@+id/v_center"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button_stoke"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/chat_title"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_confirm"
        android:layout_marginTop="@dimen/dp_20"
        android:padding="@dimen/dp_10"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/login_cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />
</RelativeLayout>