<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/create_tempgroup_bg"
    android:paddingLeft="@dimen/dp_20"
    android:paddingTop="@dimen/dp_15"
    android:paddingRight="@dimen/dp_20"
    android:paddingBottom="@dimen/dp_20">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfc_binding"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_140"
        android:layout_below="@+id/text_title"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_centerHorizontal="true"
            android:src="@drawable/dialog_icon_big" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/binding_success"
            android:textColor="@color/background_blue"
            android:textSize="@dimen/sp_22" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_binding"
        android:layout_width="@dimen/dp_197"
        android:layout_height="@dimen/dp_140"
        android:layout_below="@+id/text_title"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_tempt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center_horizontal"
        android:text="@string/binding_nfc_tempt"
        android:textColor="@color/chat_name"
        android:textSize="@dimen/sp_16"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_alignParentRight="true"
        android:src="@drawable/dialog_close"
        android:visibility="invisible"/>

</RelativeLayout>