<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_avatar_report"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@drawable/user_photo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_live_report_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="pad"
                android:textColor="@color/white"
                android:textSize="@dimen/tv_live_request_name_textsize" />

            <TextView
                android:id="@+id/tv_live_report_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000000"
                android:textColor="@color/white"
                android:textSize="@dimen/tv_live_request_id_textsize" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/text_in_requesting"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_live_respond_refuse_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginBottom="@dimen/live_request_hangup_bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:background="@drawable/individual_call_refuse_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/text_call_hang_up"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_live_respond_accept_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginBottom="@dimen/live_request_answer_bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:background="@drawable/individual_call_accept_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/text_accepted"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_request_you_to_report_the_image"
            android:textColor="@color/yellow_ff"
            android:textSize="@dimen/sp_30" />
    </LinearLayout>
</RelativeLayout>